Updated css to fix alignment issues

--- a/src/components/projectCard.css
+++ b/src/components/projectCard.css
@@ -4,7 +4,8 @@
   margin: 20px auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
+  flex-direction: column;
   align-content: center;
   justify-content: center;
   align-items: center;
@@ -16,26 +17,32 @@
 
 .image-container {
   object-fit: contain;
-  height: 250px;
+  height: 220px;
   display: flex;
   align-items: center;
   align-content: center;
   min-width: 320px;
   width: 90%;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .project-image {
   width: 100%;
+  max-width: 340px;
   max-height: 100%;
+  height: 100%;
   border-radius: 24px;
+  margin: 0 auto;
 }
 
 .project-details-container {
   text-align: center;
-  padding-left: 20px;
+  width: 90%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
 }
 
 .project-title {
@@ -100,7 +107,7 @@
   .project-details-container {
     text-align: center;
     padding-left: 20px;
-    width: 98%;
+    width: 90%;
   }
 }
 
